# RAG-Pipeline

./: .gitignore  .python-version  README.md  app.py  pyproject.toml  utils.py
Notebook/: document.ipynb  rag.ipynb
src/: data_loader.py  embedding.py  search.py  vector_store.py
