[project]
name = "rag-practice-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.2.1",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-google-genai>=3.0.0",
    "langchain-text-splitters>=1.0.0",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.3",
    "redis>=7.0.0",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
